# SimpleScriptLanguageInterpreter

./: .gitignore  CMakeLists.txt  Gramatyka.txt  Grammar.txt  README.md  install.sh
data/: source.txt  source2.txt  src
docs/: Final documentation.docx
include/: Executor.h  InputManager.h  Interpreter.h  Lexer.h  Library.h  MessageHandler.h  Parser.h  SemanticChecker.h
include/syntax_tree/: ArithmeticExpression.h  Assignable.h  Assignment.h  Bool.h  Call.h  Condition.h  ConstDeclaration.h  Expression.h  FunDefinition.h  FunctionDefinition.h  IfStatement.h  Includes.h  Literal.h  LogicalExpression.h  LoopJump.h  Matrix.h  Node.h  Number.h  Program.h  RValue.h  ReturnStatement.h  StatementBlock.h  String.h  Syntax.h  SyntaxString.h  VarDeclaration.h  Variable.h  WhileStatement.h
include/tokens/: Token.h  TokenType.h
proj.win32/: SimpleScriptLanguageInterpreter.sln  SimpleScriptLanguageInterpreter.vcxproj  SimpleScriptLanguageInterpreter.vcxproj.filters
src/: Executor.cpp  InputManager.cpp  Interpreter.cpp  Lexer.cpp  Library.cpp  MessageHandler.cpp  Parser.cpp  SemanticChecker.cpp  Variable.cpp  main.cpp
